removed KZG tests till library settled
Signed-off-by: Justin Florentine <justin+github@florentine.us>